fix map alignment and beautify

--- a/style.css
+++ b/style.css
@@ -147,20 +147,33 @@ a:hover {
   color: black !important;
   text-decoration: none;
 }
+#interactive-map {
+  margin-bottom: 100px;
+}
+
 
 #interactive-map img {
   border: 5px solid brown;
+  margin-bottom: 20px; 
+  transition-duration: 0.3s;
 }
 
 #interactive-map a {
   color: black;
   text-decoration: none;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 35%;
+  margin-bottom: 50px;
+  transition-duration: 0.3s;
 }
 
 #interactive-map a:hover {
   color: red;
   font-size: 26px;
+  transition-duration: 0.3s;
+}
+
+#interactive-map img:hover {
+  transform: scale(1.1);
+  transition-duration: 0.3s;
 }
